--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<style type="text/css">
 		body {
   		margin-top: 1.0em;
-  		background-color: #7b385e;
+  		background-color: #fff;
 		  font-family: "Helvetica,Arial,FreeSans";
-  		color: #ffffff;
+  		color: #000;
     }
     #container {
       margin: 0 auto;
@@ -55,9 +55,12 @@
     <h2>Dependencies</h2>
 <p>Drupal</p>
 <h2>Authors</h2>
-<p>Micah Walter (walterm@si.edu)<br/><br/>      </p>
+<p>Micah Walter (walterm@si.edu)
+<br/>
+<br/>      </p>
 <h2>Contact</h2>
-<p>Cooper Hewitt (walterm@si.edu)<br/>      </p>
+<p>Cooper Hewitt (walterm@si.edu)
+<br/>      </p>
 
 
     <h2>Download</h2>
