added cookie for pop up

--- a/sites/default/files/announcement.html
+++ b/sites/default/files/announcement.html
@@ -39,7 +39,7 @@ a:active {
 <h2>To learn more, visit <a href="http://cooperhewitt.org" onclick="parent.$.fn.colorbox.close();" target="_parent">cooperhewitt.org</a></h2>
           <p>Our galleries are closed for renovation. Please enjoy free <br />
 access to the <a href="http://cooperhewittshop.org" onclick="parent.$.fn.colorbox.close();" target="_parent">Shop</a> and the <a href="http://cooperhewitt.org/visit" onclick="parent.$.fn.colorbox.close();" target="_parent">Arthur Ross Terrace and Garden</a>.</p>
-          <p>The <em><a href="http://cooperhewitt.org/exhibitions" onclick="parent.$.fn.colorbox.close();" target="_parent">Design with the Other 90%: Cities</a></em> exhibition opens <br />
+          <p>The <em><a href="http://cooperhewitt.org/exhibitions/critical-mass" onclick="parent.$.fn.colorbox.close();" target="_parent">Design with the Other 90%: Cities</a></em> exhibition opens <br />
         October 15, 2011, at the United Nations. Admission is free.</p></td>
       </tr>
 	  <tr>
